objects/IMX_Contract__c.object
<CustomObject>
    <description>CUSTOM OBJECT FORMERLY LABELLED "IMX CONTRACT"; NOT THE SAME AS THE NATIVE CONTRACT OBJECT</description>
    <fields>
        <fullName>Accepts_Hardship_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>Accepts Hardship Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepts_Lifetime_Signatures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>Accepts Lifetime Signatures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Customer</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>IMX_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Increase_Conditions__c</fullName>
        <inlineHelpText>Contract conditions for increasing annual fees. To be read in conjunction with Fixed Fees and Inflation Country fields</inlineHelpText>
        <label>Annual Increase Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual review</fullName>
                </value>
                <value>
                    <fullName>Annual review, 14 days' notice</fullName>
                </value>
                <value>
                    <fullName>Annual review, 60 days' notice, limit 5%</fullName>
                </value>
                <value>
                    <fullName>Annual review, limit CPI</fullName>
                </value>
                <value>
                    <fullName>Annual review, limit greater of CPI or 5%</fullName>
                </value>
                <value>
                    <fullName>Annual review, one month's notice</fullName>
                </value>
                <value>
                    <fullName>Automatic increase, lesser of 3% or CPI</fullName>
                </value>
                <value>
                    <fullName>Automatic increase, lesser of 5% or CPI</fullName>
                </value>
                <value>
                    <fullName>Automatic increase, limit 3% pa</fullName>
                </value>
                <value>
                    <fullName>Automatic increase, limit CPI</fullName>
                </value>
                <value>
                    <fullName>Automatic increase, limit CPI or 90 days' notice</fullName>
                </value>
                <value>
                    <fullName>No provision for increases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrears__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether invoices are issued in arrears</inlineHelpText>
        <label>Arrears</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the contract will automatically renew each year without any action by either party</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Debt_Write_Off_Policy__c</fullName>
        <label>Bad Debt Write-Off Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_for_Dead_on_Scene__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>Bill for Dead on Scene</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_for_Supplemental_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>Bill for Supplemental Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_for_TWT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>Bill for TWT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Associate_Agreement__c</fullName>
        <label>Business Associate Agreement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BAA (Intermedix as Covered Entity)</fullName>
                </value>
                <value>
                    <fullName>BAA (Intermedix as Business Associate)</fullName>
                </value>
                <value>
                    <fullName>BAA (Intermedix as Subcontractor)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <inlineHelpText>This is the last date of support, not the date we receive notification of cancellation e.g. if the customer notifies us in March that they don't want to renew, but they are already paid up until June, then the cancellation date will be 30 June</inlineHelpText>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coding_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coding Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consulting_Conditions__c</fullName>
        <inlineHelpText>The conditions attached to the included consulting hours, usually relating to rollover of hours from one year to the next</inlineHelpText>
        <label>Consulting conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consulting_hours__c</fullName>
        <inlineHelpText>This is the number of annual consulting hours included in the customer's support and maintenance fee</inlineHelpText>
        <label>Consulting hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_calc__c</fullName>
        <formula>IF(Contract_Term_Months__c&lt;1,Original_Contract_End_Date__c,(DATE(
  year(Contract_Start_Date__c) + floor((month(Contract_Start_Date__c) + Contract_Term_Months__c)/12) + if(and(month(Contract_Start_Date__c)=12,Contract_Term_Months__c&gt;=12),-1,0),
  if( mod( month(Contract_Start_Date__c) + Contract_Term_Months__c, 12 ) = 0, 12 , mod( month(Contract_Start_Date__c) + Contract_Term_Months__c, 12 )
),
min(
  day(Contract_Start_Date__c),
  case(
    max( mod( month(Contract_Start_Date__c) + Contract_Term_Months__c, 12 ) , 1),
    9,30,
    4,30,
    6,30,
    11,30,
    2,
      if(mod((year(Contract_Start_Date__c)
      + floor((month(Contract_Start_Date__c) + Contract_Term_Months__c)/12) + if(and(month(Contract_Start_Date__c)=12,Contract_Term_Months__c&gt;=12),-1,0)),4)=0,29,28),
      31
    )
  )
)) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Start Date PLUS the Contract Term (Months)=original term of the contract. All renewal yrs should be noted in the # of Renewal Years field.  Subsequent renewals shall be recorded by using "New Contract Renewal" button to create renewal records.</inlineHelpText>
        <label>Contract End Date (calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expires_On__c</fullName>
        <formula>if(isblank(Max_Contract_Expire__c),Contract_End_Date_calc__c,Max_Contract_Expire__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Problems__c</fullName>
        <description>Unfortunately in practice we can only use 235 characters in this field, because the contract checks report prefixes the field with "Contract problems: ". Users will still be able to enter longer text, but the report will error</description>
        <inlineHelpText>This field should only be used when the contract has been signed but there are problems that need to be resolved e.g. missing pages or appendices, or if the agreement is for a fixed period and we need to remember to renew it</inlineHelpText>
        <label>Contract Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>Date contract was signed</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Months__c</fullName>
        <description>Term of the contract in total months</description>
        <inlineHelpText>Term of the contract in total months</inlineHelpText>
        <label>Contract Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_Billing_Fee__c</fullName>
        <label>Contracted Billing Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts_with_Hospitals_Facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>Contracts with Hospitals/Facilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cooperative_Purchasing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cooperative Purchasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Acceptance__c</fullName>
        <label>Credit Card Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>ZPay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>QAR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Billing_Fee__c</fullName>
        <label>Current Billing Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Expiration_Date__c</fullName>
        <description>At any point during the contract, if the term is extended (whether through yearly renewals or client month to month requests), update this value to show the most current expiration date.  Your contract renewal notices will come from this field.</description>
        <inlineHelpText>This field is being phased out.  Please create a "New Contract Renewal" to indicate a renewal has been executed and record the new date on that record.  This field will soon be removed as the renewal records are completed..</inlineHelpText>
        <label>Current Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNU_Contract_End_Date__c</fullName>
        <description>Calculation of the original Contract Start Date PLUS the Contract Term (Months).  This calculation will give you the original term of the contract.  All renewal years should be noted in the # of Renewal Years field and if any supplemental extensions have been made, the Current Contract Expiration Date should be updated accordingly.</description>
        <formula>Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Start Date PLUS the Contract Term (Months)=original term of the contract.  All renewal yrs should be noted in the # of Renewal Years field and if any supplemental extensions have been made, the Current Contract Expiration Date should be updated.</inlineHelpText>
        <label>DNU_Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Restrictions__c</fullName>
        <label>Data Restrictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>De-identification of PHI</fullName>
                </value>
                <value>
                    <fullName>Use of Data (not PHI)</fullName>
                </value>
                <value>
                    <fullName>Access/Transmit/Store Data outside US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Contract_Status__c</fullName>
        <label>EMS Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Expired</fullName>
                </value>
                <value>
                    <fullName>Current Contract</fullName>
                </value>
                <value>
                    <fullName>Implementing</fullName>
                </value>
                <value>
                    <fullName>Lost RFP</fullName>
                </value>
                <value>
                    <fullName>Termed by Client - Amicable</fullName>
                </value>
                <value>
                    <fullName>Termed by Client - Contentious</fullName>
                </value>
                <value>
                    <fullName>Termed by IMX</fullName>
                    <label>Termed by R1/IMX</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_RCM_Fee__c</fullName>
        <description>The fee that IMX is charging for EMS RCM services.</description>
        <inlineHelpText>The fee that IMX is charging for EMS RCM services.</inlineHelpText>
        <label>EMS RCM Fee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_TripTix_Fee__c</fullName>
        <description>The fee that IMX is charging for the TripTix product.</description>
        <inlineHelpText>The fee that IMX is charging for the TripTix product.</inlineHelpText>
        <label>EMS TripTix Fee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Type_of_Vehicles__c</fullName>
        <description>Select all vehicle types used by the client</description>
        <inlineHelpText>Select all vehicle types used by the client</inlineHelpText>
        <label>EMS Type of Vehicles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALS</fullName>
                </value>
                <value>
                    <fullName>BLS</fullName>
                </value>
                <value>
                    <fullName>Critical Care Unit</fullName>
                </value>
                <value>
                    <fullName>Fixed Wing</fullName>
                </value>
                <value>
                    <fullName>Helicopter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evergreen_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evergreen Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <inlineHelpText>Date when the contract expires and a completely new one is required</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Code__c</fullName>
        <formula>Account__r.Facility_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Increase_Notes__c</fullName>
        <inlineHelpText>This field should not normally be used, and is only for temporary agreements with customers not to increase fees. For any permanent information, the main conditions picklist should be updated rather than using this field</inlineHelpText>
        <label>Fee Increase Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Fee__c</fullName>
        <label>Fixed Fee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Fees_yr__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of years following support start for which annual fees are fixed</inlineHelpText>
        <label>Fixed Fees (yr)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Restricitions__c</fullName>
        <label>General Restricitions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subcontracting</fullName>
                </value>
                <value>
                    <fullName>Publicity</fullName>
                </value>
                <value>
                    <fullName>Offshoring</fullName>
                </value>
                <value>
                    <fullName>Foreign Personnel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_Increase_Conditions__c</fullName>
        <inlineHelpText>Contract conditions for increasing hourly rates</inlineHelpText>
        <label>Hourly Increase Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual review</fullName>
                </value>
                <value>
                    <fullName>Annual review, limit CPI</fullName>
                </value>
                <value>
                    <fullName>Annual review, one month's notice</fullName>
                </value>
                <value>
                    <fullName>Annual review, three months' notice</fullName>
                </value>
                <value>
                    <fullName>Annual review, written notice</fullName>
                </value>
                <value>
                    <fullName>Automatic increase, lesser of 5% or CPI</fullName>
                </value>
                <value>
                    <fullName>No hourly rate mentioned</fullName>
                </value>
                <value>
                    <fullName>No provision for increases</fullName>
                </value>
                <value>
                    <fullName>Prevailing rates apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMX_Contract_Legacy_ID__c</fullName>
        <label>IMX Contract Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_District_Billing_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate YES, by checking this box</description>
        <inlineHelpText>Indicate YES, by checking this box</inlineHelpText>
        <label>In District Billing Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increase_after_Term_Date__c</fullName>
        <label>Increase after Term Date</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inflation_Country__c</fullName>
        <description>Any changes to this list need to be replicated on the Inflation object</description>
        <inlineHelpText>The country to be used for inflation calculations. This must be set to NZ unless otherwise specified in the contract</inlineHelpText>
        <label>Inflation Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NZ</fullName>
                    <default>true</default>
                    <label>NZ</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inflation_Since_Annual_Increase__c</fullName>
        <description>This field can't be set to read-only because the Apex code that updates it won't be able to run</description>
        <label>Inflation Since Annual Increase</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inflation_Since_Hourly_Increase__c</fullName>
        <description>This field can't be set to read-only because the Apex code that updates it won't be able to run</description>
        <label>Inflation Since Hourly Increase</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice_Details__c</fullName>
        <inlineHelpText>Include any information here which might be needed when invoices are generated e.g. information to be included in the invoice description</inlineHelpText>
        <label>Invoice Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoices__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of invoices per year</inlineHelpText>
        <label># Invoices</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Annual_Fee_History_Amount__c</fullName>
        <description>This field can't be set to read-only, because the workflow rules and code that update it won't be able to run</description>
        <label>Latest Annual Fee History Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Annual_Fee_History_Date__c</fullName>
        <description>This field can't be set to read-only because the workflow rules and code that update it won't be able to run</description>
        <label>Latest Annual Fee History Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Hourly_Fee_History_Amount__c</fullName>
        <description>This field can't be set to read-only, because the workflow rules and code that update it won't be able to run</description>
        <label>Latest Hourly Fee History Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Hourly_Fee_History_Date__c</fullName>
        <description>This field can't be set to read-only because the workflow rules and code that update it won't be able to run</description>
        <label>Latest Hourly Fee History Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_of_Service_Provided__c</fullName>
        <description>Select all levels performed by the client</description>
        <inlineHelpText>Select all levels performed by the client</inlineHelpText>
        <label>Level of Service Provided</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLS</fullName>
                </value>
                <value>
                    <fullName>ALS</fullName>
                </value>
                <value>
                    <fullName>ALS2</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>SCT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Contract_Expire__c</fullName>
        <label>Max Contract Expire</label>
        <summarizedField>Contract_Renewal__c.New_Contract_End_Date__c</summarizedField>
        <summaryForeignKey>Contract_Renewal__c.Contract__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Medicaid_Fee__c</fullName>
        <description>The fee that IMX is charging for processing Medicaid claims.</description>
        <inlineHelpText>The fee that IMX is charging for processing Medicaid claims.</inlineHelpText>
        <label>Medicaid Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Favored_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Favored Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOPP_Fee__c</fullName>
        <description>The fee that IMX is charging for sending the Notice of Privacy Practice documents (if applicable)</description>
        <inlineHelpText>The fee that IMX is charging for sending the Notice of Privacy Practice documents (if applicable)</inlineHelpText>
        <label>NOPP Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOPP_Sent__c</fullName>
        <description>Indicate if the NOPP is sent by the Client or Intermedix.  If Intermedix is selected, you must update the NOPP Fee field.</description>
        <inlineHelpText>Indicate if the NOPP is sent by the Client or Intermedix.  If Intermedix is selected, you must update the NOPP Fee field.</inlineHelpText>
        <label>NOPP Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>by Client</fullName>
                </value>
                <value>
                    <fullName>by Intermedix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Invoice_Date__c</fullName>
        <description>This field can't be set to read-only because the Apex code that updates it won't be able to run</description>
        <label>Next Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Terms_Conditions__c</fullName>
        <label>Non-Standard Terms &amp; Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes/Special Terms</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OBB_Finance_Agreement__c</fullName>
        <label>OBB Finance Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OBB_Monthly_Amount__c</fullName>
        <label>OBB Monthly Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optima_Customer_Code__c</fullName>
        <formula>Account__r.Optima_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optima Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Contract_End_Date__c</fullName>
        <label>Original Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Expiration_Notice__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Indicate the number of days prior to the CURRENT CONTRACT EXPIRATION DATE that you would like to be notified by Salesforce of the pending term date of the contract.</description>
        <inlineHelpText>Indicate the number of days prior to the CURRENT CONTRACT EXPIRATION DATE that you would like to be notified by Salesforce of the pending term date of the contract.</inlineHelpText>
        <label>Owner Expiration Notice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Expiry__c</fullName>
        <inlineHelpText>Expiry date of current purchase order. If unsure, enter date of next invoice and add an explanation to the PO Process field</inlineHelpText>
        <label>PO Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <inlineHelpText>Purchase order number</inlineHelpText>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Process__c</fullName>
        <inlineHelpText>Process for obtaining a purchase order number, including contact details</inlineHelpText>
        <label>PO Process</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_Status__c</fullName>
        <inlineHelpText>Whether a purchase order is required on invoices under this contract. If unsure, use To be confirmed</inlineHelpText>
        <label>PO Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be confirmed</fullName>
                    <default>true</default>
                    <label>To be confirmed</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSR_Billing_Fee__c</fullName>
        <label>PSR Billing Fee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Survey_Fee__c</fullName>
        <description>The fee that IMX is charging for sending Patient Surveys (if applicable)</description>
        <inlineHelpText>The fee that IMX is charging for sending Patient Surveys (if applicable)</inlineHelpText>
        <label>Patient Survey Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patient_Survey_Mailed__c</fullName>
        <label>Patient Survey Mailed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>by Client</fullName>
                </value>
                <value>
                    <fullName>by Intermedix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Plan_Details__c</fullName>
        <inlineHelpText>Provide details of the payment plan options provided by the client, if applicable</inlineHelpText>
        <label>Payment Plan Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Used to issue invoices in advance for customers with long payment terms</description>
        <inlineHelpText>The number of days after receipt of the invoice that the customer will pay it. Unless otherwise specified in the agreement, this should be set to 30 (one month)</inlineHelpText>
        <label>Payment terms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Bond__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Bond</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>